# rgb_line_navigating_robot

./: CMakeLists.txt  Makefile  README.md  manifest.xml
src/: rgb_line_navigating_robot.cpp
